Make delete trash can icon visible
It was showing, but it was too big to fit in the button

--- a/priv/static/budget.css
+++ b/priv/static/budget.css
@@ -30,4 +30,6 @@ body {font-size: 80%; }
 
 .delete{
   background-image: url('images/trash.jpg');
+  background-size: 15px;
+  background-repeat: no-repeat;
 }
