--- a/priv/static/budget.css
+++ b/priv/static/budget.css
@@ -41,3 +41,13 @@ body {font-size: 80%; }
 .dollarAmount {
   width: 65px;
 }
+
+button {
+  /*font-size: 80%;*/
+  font-family: Times New Roman;
+}
+
+input {
+  font-family: Times New Roman;
+  font-size: 80%;
+}
