--- a/priv/static/budget.css
+++ b/priv/static/budget.css
@@ -52,3 +52,19 @@ input {
   font-family: Times New Roman;
   font-size: 80%;
 }
+
+.newDialog {
+  visibility: hidden;
+  position: fixed;
+  left: 5%;
+  top: 10%;
+  width: 300px;
+  height: 200px;
+  border: 1px solid green;
+  background-color: white;
+  padding: 10px;
+}
+
+.longText {
+  width: 250px;
+}
